Bug 1796477:  Fix bug where selected resource dropdown group/version description not visible
Fixes https://bugzilla.redhat.com/show_bug.cgi?id=1796477

--- a/frontend/public/components/_resource-dropdown.scss
+++ b/frontend/public/components/_resource-dropdown.scss
@@ -47,14 +47,6 @@
     @media (min-width: 480px) {
       min-width: 350px;
     }
-    &:active,
-    .active a,
-    .active a:focus,
-    .active a:hover {
-      .co-resource-item__resource-api {
-        color: $dropdown-link-active-color;
-      }
-    }
   }
 }
 
